Challenge-1/rtb.tf
# Creating Route Table
resource "aws_route_table" "route" {
    vpc_id = aws_vpc.mywebappvpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.mywebappgateway.id
    }

    tags = {
        Name = "Route to internet"
    }
}

# Associating Route Table
resource "aws_route_table_association" "rt1" {
    subnet_id = aws_subnet.mywebappsubnet1.id
    route_table_id = aws_route_table.route.id
}

# Associating Route Table
resource "aws_route_table_association" "rt2" {
    subnet_id = aws_subnet.mywebappsubnet2.id
    route_table_id = aws_route_table.route.id
}
